# rakuten-books-app

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/api/v1/: books.py
src/app/core/: config.py  db.py  logger.py
src/app/models/: book.py
src/app/schemas/: book.py  book_request.py
src/app/scripts/: import_books.py
src/app/services/: book_service.py  rakuten.py
